# furiganalyse

./: .dockerignore  .gitignore  Dockerfile  Dockerrun.aws.json  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
assets/: styles.css
furiganalyse/: __main__.py  apkg_format.py  app.py  epub_format.py  known_words.py  params.py  parsing.py  txt_format.py
furiganalyse/templates/: download.html  error.html  upload.html
furiganalyse/words_lists/: JLPT_N1.csv  JLPT_N2.csv  JLPT_N3.csv  JLPT_N4.csv  JLPT_N5.csv
tests/: test_furiganalyse.py  test_known_words.py
