[metadata]
name = furiganalyse
version = 0.4
description = Annotate Japanese ebooks with furigana
long_description = file: README.md
author = Itsupera
author_email = itsupera@gmail.com
url = https://github.com/itsupera/furiganalyse

[options]
packages=
    furiganalyse

python_requires = >=3.6

setup_requires =
    setuptools >= 40.0
    pip >= 19.1

install_requires =
    typer==0.3.2
    Flask==2.0.1
    furigana@ git+https://github.com/itsupera/furigana.git@0.3
    Werkzeug==2.0.1
    gunicorn==20.1.0
