[metadata]
name = furiganalyse
version = 0.7.5
description = Annotate Japanese ebooks with furigana
long_description = file: README.md
author = Itsupera
author_email = itsupera@gmail.com
url = https://github.com/itsupera/furiganalyse

[options]
packages=
    furiganalyse

python_requires = >=3.6

setup_requires =
    setuptools >= 40.0
    pip >= 19.1

install_requires =
    typer==0.3.2
    fastapi==0.79.0
    uvicorn==0.18.2
    python-multipart==0.0.5
    Jinja2==3.1.2
    furigana@ git+https://github.com/itsupera/furigana.git@0.4
    # Using a fork that enables setting the "due" field of the card, to have them in the right order
    genanki @ git+https://github.com/kerrickstaley/genanki@v0.13.0#egg=genanki
    pypandoc==1.6.4
    capybre==0.0.6
